# ActionDoc

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  action.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release-validation.yml
docs/: ARCHITECTURE.md  DEVELOPMENT_PLAN.md  GITHUB_ACTION.md  RELEASE_CHECKLIST.md  RELEASING.md  REPORT_FORMATS.md  ROADMAP.md  RULES.md  SCORING.md
examples/: actiondoc-workflow.yml
scripts/: __init__.py  github_action_entrypoint.py
src/actiondoctor/: __init__.py  __main__.py  cli.py  engine.py  registry.py
src/actiondoctor/models/: __init__.py  enums.py  finding.py  report.py  result.py  rule.py  score.py  workflow.py
src/actiondoctor/parser/: __init__.py  discovery.py  loader.py  yaml_parser.py
src/actiondoctor/reporting/: __init__.py  common.py  json_reporter.py  markdown.py  output.py  terminal.py
src/actiondoctor/rules/: __init__.py  base.py  traversal.py
src/actiondoctor/scoring/: __init__.py
tests/fixtures/security/: action_branch.yml  action_docker.yml  action_local.yml  action_sha.yml  action_version.yml  every_job_permissions.yml  job_secret_env.yml  malformed_shapes.yml  missing_permissions.yml  multiple_unpinned.yml  permissions_all_write.yml  permissions_narrow.yml  permissions_read_all.yml  reusable_job.yml  (+6 more)
tests/unit/: test_cli.py  test_cost_rules.py  test_discovery.py  test_engine.py  test_github_action.py  test_json_reporter.py  test_loading.py  test_maintainability_rules.py  test_markdown_reporter.py  test_models.py  test_parsing.py  test_registry.py  test_release_readiness.py  test_reliability_rules.py  test_report_output.py  test_rules.py  test_scoring.py  test_security_rules.py  test_terminal_reporting.py
(+53 files in other folders)
