[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "actiondoctor"
dynamic = ["version"]
description = "Audit GitHub Actions workflows for security, reliability, cost, and maintainability issues."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "ActionDoctor contributors" },
]
keywords = ["github-actions", "security", "linting", "cli"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.7",
    "rich>=13.7",
    "ruamel.yaml>=0.18.6",
    "typer>=0.12.3",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.2",
    "ruff>=0.5",
]

[project.scripts]
actiondoctor = "actiondoctor.cli:app"

[project.urls]
Documentation = "https://github.com/axthithya/ActionDoc#readme"
Issues = "https://github.com/axthithya/ActionDoc/issues"
Source = "https://github.com/axthithya/ActionDoc"

[tool.hatch.version]
path = "src/actiondoctor/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/actiondoctor"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "SIM", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
pretty = true
show_error_codes = true

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
